--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "sync-users": "ts-node --project tsconfig.scripts.json scripts/sync-users.ts",
-    "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts"
+    "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts",
+    "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
