--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
@@ -38,6 +40,7 @@
     "react-dom": "19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.65.0",
+    "recharts": "^3.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
