--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
@@ -43,6 +44,7 @@
     "recharts": "^3.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.181.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
