--- a/env.example
+++ b/env.example
@@ -6,3 +6,6 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+# Authentication Configuration
+NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=@allianz-nogaro.fr
+
