--- a/env.example
+++ b/env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 # Authentication Configuration
 NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=@allianz-nogaro.fr
 
+# Cron Job Security
+CRON_SECRET=your_random_secret_key_here
+
