--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check-users": "ts-node --project tsconfig.scripts.json scripts/check-users.ts",
     "sync-users": "ts-node --project tsconfig.scripts.json scripts/sync-users.ts",
     "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts",
-    "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts"
+    "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts",
+    "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
