feat: script d'import des actes d'octobre pour Kheira
- Ajout du script import-kheira-october.ts pour importer les actes de santé individuelle
- 12 actes importés pour octobre 2025 (dateSaisie: 01/10, moisKey: 2025-10)
- 7 Révisions, 3 Affaires Nouvelles, 1 COURT → AZ
- Total CA: 20 498,72€ | CA Pondéré: 12 736€
- Commande npm: npm run import:kheira-oct

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sync-users": "ts-node --project tsconfig.scripts.json scripts/sync-users.ts",
     "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts",
     "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts",
-    "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts"
+    "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts",
+    "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
