feat: script d'import des actes de septembre pour Kheira
- Ajout du script import-kheira-september.ts pour importer les actes de santé individuelle
- 13 actes importés pour septembre 2025 (dateSaisie: 01/09, moisKey: 2025-09)
- 4 Révisions, 6 Affaires Nouvelles, 2 Adhésions salarié
- Total CA: 23 422,09€ | CA Pondéré: 19 488€
- Commande npm: npm run import:kheira-sep

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts",
     "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts",
     "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts",
-    "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts"
+    "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts",
+    "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
