--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts",
     "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts",
     "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts",
-    "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts"
+    "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts",
+    "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
