feat: script d'import des actes de juin pour Kheira
- Ajout du script import-kheira-june.ts pour importer les actes de santé individuelle
- 4 actes importés pour juin 2025 (dateSaisie: 01/06, moisKey: 2025-06)
- 3 Révisions, 1 Adhésion salarié
- Total CA: 8 768,01€ | CA Pondéré: 4 385€
- Commande npm: npm run import:kheira-jun

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts",
     "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts",
     "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts",
-    "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts"
+    "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts",
+    "import:kheira-jun": "ts-node --project tsconfig.scripts.json scripts/import-kheira-june.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
