--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts",
     "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts",
     "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts",
-    "import:kheira-jun": "ts-node --project tsconfig.scripts.json scripts/import-kheira-june.ts"
+    "import:kheira-jun": "ts-node --project tsconfig.scripts.json scripts/import-kheira-june.ts",
+    "import:kheira-may": "ts-node --project tsconfig.scripts.json scripts/import-kheira-may.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
