feat: Outil complet de gestion des commissions agence
- Création de l'interface de saisie et visualisation des commissions mensuelles
- Tableau interactif avec 9 métriques (IARD, Vie, Courtage, Profits, Total, Charges, Résultat, Prélèvements)
- Modal de saisie/modification au click sur chaque mois
- Format entier avec séparateurs de milliers (ex: 83 717 €)
- Calculs automatiques (Total et Résultat)
- Gestion des années (création, sélection, extrapolation pour années incomplètes)
- KPI Cards animées (Total année, Meilleur/Pire mois, Moyenne)
- Script d'import depuis docs/commissions.md vers Firestore
- Validation Zod complète
- Firestore Rules pour admins uniquement
- Documentation complète dans docs/COMMISSIONS_AGENCE.md
- Design gaming avec effets wow (gradients, animations, hover effects)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts",
     "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts",
     "import:kheira-jun": "ts-node --project tsconfig.scripts.json scripts/import-kheira-june.ts",
-    "import:kheira-may": "ts-node --project tsconfig.scripts.json scripts/import-kheira-may.ts"
+    "import:kheira-may": "ts-node --project tsconfig.scripts.json scripts/import-kheira-may.ts",
+    "import:commissions": "ts-node --project tsconfig.scripts.json scripts/import-commissions-from-md.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
