feat: Ajout des données 2023 pour les commissions agence
- Création du script import-commissions-2023.ts
- Import des 12 mois de 2023 (janvier à décembre)
- Commande npm: import:commissions-2023
- Total année 2023: 311 896 € de résultat

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "import:kheira-jul": "ts-node --project tsconfig.scripts.json scripts/import-kheira-july.ts",
     "import:kheira-jun": "ts-node --project tsconfig.scripts.json scripts/import-kheira-june.ts",
     "import:kheira-may": "ts-node --project tsconfig.scripts.json scripts/import-kheira-may.ts",
-    "import:commissions": "ts-node --project tsconfig.scripts.json scripts/import-commissions-from-md.ts"
+    "import:commissions": "ts-node --project tsconfig.scripts.json scripts/import-commissions-from-md.ts",
+    "import:commissions-2023": "ts-node --project tsconfig.scripts.json scripts/import-commissions-2023.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
