--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sync-users": "ts-node --project tsconfig.scripts.json scripts/sync-users.ts",
     "init-companies": "ts-node --project tsconfig.scripts.json scripts/init-companies.ts",
     "migrate-ird-pro-commissions": "ts-node --project tsconfig.scripts.json scripts/migrate-ird-pro-commissions.ts",
+    "generate-leaderboard": "ts-node --project tsconfig.scripts.json scripts/generate-leaderboard.ts",
     "import:kheira-nov": "ts-node --project tsconfig.scripts.json scripts/import-kheira-november.ts",
     "import:kheira-oct": "ts-node --project tsconfig.scripts.json scripts/import-kheira-october.ts",
     "import:kheira-sep": "ts-node --project tsconfig.scripts.json scripts/import-kheira-september.ts",
