--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
+  "css.validate": false,
   "css.lint.unknownAtRules": "ignore",
   "css.lint.unknownProperties": "ignore",
+  "tailwindCSS.validate": false,
   "tailwindCSS.experimental.classRegex": [],
-  "tailwindCSS.validate": true,
   "tailwindCSS.lint.cssConflict": "ignore",
   "tailwindCSS.lint.invalidApply": "ignore",
   "tailwindCSS.lint.invalidConfigPath": "ignore",
@@ -25,5 +26,14 @@
   ],
   "css.customData": [],
   "scss.lint.unknownAtRules": "ignore",
-  "problems.showCurrentInStatus": true
+  "problems.showCurrentInStatus": true,
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  }
 }
