--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,9 @@
   },
   "editor.quickSuggestions": {
     "strings": true
-  }
+  },
+  "tailwindCSS.experimental.configFile": null,
+  "tailwindCSS.suggestions": false,
+  "tailwindCSS.hovers": false,
+  "tailwindCSS.colorDecorators": false
 }
