--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Firebase Configuration
+# Firebase Configuration (Client SDK)
 NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
@@ -6,9 +6,14 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+# Firebase Admin SDK (Server-side only - pour API routes et Server Actions)
+# Ces variables sont nécessaires pour les opérations serveur (vérification unicité, etc.)
+FIREBASE_PROJECT_ID=your_project_id
+FIREBASE_PRIVATE_KEY=your_private_key_here
+FIREBASE_CLIENT_EMAIL=your_service_account_email@your_project_id.iam.gserviceaccount.com
+
 # Authentication Configuration
 NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=@allianz-nogaro.fr
 
 # Cron Job Security
 CRON_SECRET=your_random_secret_key_here
-
