--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,13 @@ NEXT_PUBLIC_ALLOWED_EMAIL_DOMAIN=@allianz-nogaro.fr
 
 # Cron Job Security
 CRON_SECRET=your_random_secret_key_here
+
+# RAG Chatbot Configuration
+# Qdrant Cloud
+QDRANT_URL=https://your-cluster.qdrant.io
+QDRANT_API_KEY=your_qdrant_api_key_here
+
+# OpenAI
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_CHAT_MODEL=gpt-4o
