--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "import:kheira-may": "ts-node --project tsconfig.scripts.json scripts/import-kheira-may.ts",
     "import:commissions": "ts-node --project tsconfig.scripts.json scripts/import-commissions-from-md.ts",
     "import:commissions-2023": "ts-node --project tsconfig.scripts.json scripts/import-commissions-2023.ts",
-    "get-user-info": "ts-node --project tsconfig.scripts.json scripts/get-user-info.ts"
+    "get-user-info": "ts-node --project tsconfig.scripts.json scripts/get-user-info.ts",
+    "test-rag": "ts-node --project tsconfig.scripts.json -r tsconfig-paths/register scripts/test-rag-connection.ts",
+    "test-rag-api": "ts-node --project tsconfig.scripts.json -r tsconfig-paths/register scripts/test-rag-api.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@qdrant/js-client-rest": "^1.16.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -45,21 +48,26 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
     "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^6.0.1",
     "three": "^0.181.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -69,6 +77,7 @@
     "firebase-admin": "^13.5.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
