--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
       "path": "/api/cron/update-leaderboard",
       "schedule": "0 2 * * *"
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "messagerie": false
+    }
+  }
 }
 
