--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ai-sdk/openai": "^3.0.18",
     "@google-cloud/vision": "^5.3.4",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
