--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,15 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+# Nina — Bot Secrétaire (feature flag)
+NEXT_PUBLIC_ENABLE_NINA_BOT=false
+
+# OpenAI (assistant / Nina) — côté serveur uniquement, jamais exposé au client
+OPENAI_API_KEY=
+
+# Crons / jobs planifiés (Bearer secret pour routes protégées)
+CRON_SECRET=
+
 # Pappers API Configuration
 PAPPERS_API_KEY=your_pappers_api_key_here
 
