--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test:rules": "ts-node --project tsconfig.scripts.json scripts/test-firebase-rules.ts",
     "test:rules:emulator": "ts-node --project tsconfig.scripts.json scripts/test-firestore-rules-emulator.ts",
     "test:storage": "ts-node --project tsconfig.scripts.json scripts/test-storage-upload.ts",
-    "cleanup:rag": "ts-node --project tsconfig.scripts.json scripts/cleanup-rag-collections.ts"
+    "cleanup:rag": "ts-node --project tsconfig.scripts.json scripts/cleanup-rag-collections.ts",
+    "smoke:nina": "ts-node --project tsconfig.scripts.json scripts/smoke-test-nina.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.18",
