--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,22 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+# Firebase Admin (conversations / export persistés) — côté serveur uniquement
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+
 # Nina — Bot Secrétaire (feature flag)
 NEXT_PUBLIC_ENABLE_NINA_BOT=false
 
 # OpenAI (assistant / Nina) — côté serveur uniquement, jamais exposé au client
 OPENAI_API_KEY=
+
+# URL de base de l'app (liens, webhooks). Fallback sur Host si absent.
+NEXT_PUBLIC_BASE_URL=
+
+# Extraction PDF/images (OCR, Document AI) — optionnel
+GOOGLE_APPLICATION_CREDENTIALS_JSON=
 
 # Crons / jobs planifiés (Bearer secret pour routes protégées)
 CRON_SECRET=
