--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-# Firebase Configuration (Client SDK)
+# --- Nina / Assistant — variables obligatoires pour le déploiement Nina ---
+# Référence : docs/agents-ia/nina_secretaire/TODO-DEPLOIEMENT-NINA.md
+
+# OpenAI — côté serveur uniquement, jamais exposé au client (/api/assistant/chat, extraction fichiers)
+OPENAI_API_KEY=
+
+# Firebase (client) — obligatoire pour auth et accès aux pages /commun/agents-ia/*
 NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
@@ -6,24 +12,23 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
-# Firebase Admin (conversations / export persistés) — côté serveur uniquement
+# Firebase Admin — si conversations/export persistés côté serveur
 FIREBASE_PROJECT_ID=
 FIREBASE_PRIVATE_KEY=
 FIREBASE_CLIENT_EMAIL=
 
-# Nina — Bot Secrétaire (feature flag)
-NEXT_PUBLIC_ENABLE_NINA_BOT=false
+# --- Optionnelles selon usage ---
 
-# OpenAI (assistant / Nina) — côté serveur uniquement, jamais exposé au client
-OPENAI_API_KEY=
+# Feature flag Nina (activation du bot secrétaire en prod)
+NEXT_PUBLIC_ENABLE_NINA_BOT=false
 
 # URL de base de l'app (liens, webhooks). Fallback sur Host si absent.
 NEXT_PUBLIC_BASE_URL=
 
-# Extraction PDF/images (OCR, Document AI) — optionnel
+# Extraction PDF/images (OCR, Document AI) — si Nina traite des documents
 GOOGLE_APPLICATION_CREDENTIALS_JSON=
 
-# Crons / jobs planifiés (Bearer secret pour routes protégées)
+# Crons — Bearer secret pour routes protégées (/api/cron/*)
 CRON_SECRET=
 
 # Pappers API Configuration
