feat(nina): script get-firebase-token pour smoke test Bonjour → Nina
- scripts/get-firebase-id-token.ts (Firebase Auth REST, idToken stdout)
- npm run get-firebase-token (SMOKE_TEST_EMAIL, SMOKE_TEST_PASSWORD)
- .env.example: SMOKE_TEST_EMAIL, SMOKE_TEST_PASSWORD (optionnel)
- TODO-DEPLOIEMENT: doc utilisation token pour smoke:nina en prod

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,10 @@ GOOGLE_APPLICATION_CREDENTIALS_JSON=
 # Crons — Bearer secret pour routes protégées (/api/cron/*)
 CRON_SECRET=
 
+# Smoke test Nina « Bonjour → Nina » (optionnel) — pour npm run get-firebase-token
+SMOKE_TEST_EMAIL=
+SMOKE_TEST_PASSWORD=
+
 # Pappers API Configuration
 PAPPERS_API_KEY=your_pappers_api_key_here
 
