chore(nina): priorités hautes déploiement, doc §5.2/§7.1, .env.example smoke

--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,12 @@ GOOGLE_APPLICATION_CREDENTIALS_JSON=
 # Crons — Bearer secret pour routes protégées (/api/cron/*)
 CRON_SECRET=
 
-# Smoke test Nina « Bonjour → Nina » (optionnel) — pour npm run get-firebase-token
+# Smoke test Nina (optionnel) — voir docs/agents-ia/nina_secretaire/TODO-DEPLOIEMENT-NINA.md § 7
+# get-firebase-token : SMOKE_TEST_EMAIL=... SMOKE_TEST_PASSWORD=... npm run get-firebase-token
+# smoke:nina : SMOKE_TEST_BASE_URL=https://xxx.vercel.app npm run smoke:nina
 SMOKE_TEST_EMAIL=
 SMOKE_TEST_PASSWORD=
+SMOKE_TEST_BASE_URL=
 
 # Pappers API Configuration
 PAPPERS_API_KEY=your_pappers_api_key_here
