feat(bob): Bob Assistant agence Santé & Prévoyance — page, API, prompt, config, liste agents, raccourci Alt+B

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ FIREBASE_CLIENT_EMAIL=
 # Feature flag Nina (activation du bot secrétaire en prod)
 NEXT_PUBLIC_ENABLE_NINA_BOT=false
 
+# Feature flag Bob (Assistant agence Santé & Prévoyance)
+NEXT_PUBLIC_ENABLE_BOB_BOT=false
+
 # URL de base de l'app (liens, webhooks). Fallback sur Host si absent.
 NEXT_PUBLIC_BASE_URL=
 
